# ESP8266

./: README.md
http-receiver/: README.md  sdkconfig
http-receiver/main/: CMakeLists.txt  config.h
http-receiver/main/core/: devices.h
http-receiver/main/core/ESP8266/: basics.c
http-receiver/main/core/ESP8266/output/relay/: relay.c
http-receiver/main/core/ESP8266/peripherals/gpio/: gpio.c
http-receiver/main/core/ESP8266/peripherals/i2c/: i2c.c
http-sender/: Makefile  README.md
http-sender/main/: CMakeLists.txt  config.h
http-sender/main/core/: lib.c
http-sender/main/core/ESP8266/: basics.c
http-sender/main/core/ESP8266/peripherals/gpio/: gpio.c
http-sender/main/core/ESP8266/peripherals/i2c/: i2c.c
http-sender/main/core/ESP8266/protocols/http/: http.c  http.h
http-sender/main/core/ESP8266/sensors/acoustic/: acoustic.c
http-sender/main/core/ESP8266/sensors/bh1750/: bh1750.c
http-sender/main/core/ESP8266/sensors/bme280/: bme280.c  bme280.h
http-sender/main/core/ESP8266/sensors/mpu6050/: mpu6050.c  mpu6050.h
http-sender/main/core/ESP8266/wifi/: wifi.c  wifi.h
mqtt-sender/: CMakeLists.txt  README.md
mqtt-sender/main/: CMakeLists.txt  app_main.c  config.h
mqtt-sender/main/core/: devices.h
mqtt-sender/main/core/ESP8266/: ESP8266-headers.h  basics.c
mqtt-sender/main/core/ESP8266/peripherals/gpio/: gpio.c
mqtt-sender/main/core/ESP8266/protocols/mqtt/: mqtt.c
mqtt-sender/main/core/ESP8266/sensors/acoustic/: acoustic.c
mqtt-sender/main/core/ESP8266/sensors/internal/: internal.c
mqtt-sender/main/core/ESP8266/sensors/mpu6050/: mpu6050.c
